Spacing fix

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -32,6 +32,10 @@ select {
   color: #8C97A2;
 }
 
+th {
+  text-align: center;
+}
+
 .account-forms {
   border: 5px solid #059005;
   max-width: 700px;
